OOps almost forgot personal reflection!

--- a/posts/CancerFinalProject/index.ipynb
+++ b/posts/CancerFinalProject/index.ipynb
@@ -170,11 +170,11 @@
    "metadata": {},
    "source": [
     "### Personal Reflection\n",
-    "*At the very end of your blog post, in a few paragraphs, respond to the following questions:*\n",
+    "This project turned out to be more challenging than I’d anticipated. Image classification isn’t easy! I set out in blind hope of creating high-accuracy models like we’d found evidence of in scientific papers, but our strongest fell a little short with 75% accuracy. That being said, this is in the range of other results we found online. I do feel proud when I think about what we accomplished. Wrangling complex image data, designing and implementing multiple neural networks, and consistently improving model accuracy … that’s worth celebrating!\n",
     "\n",
-    "*What did you learn from the process of researching, implementing, and communicating about your project?*\n",
-    "*How do you feel about what you achieved? Did meet your initial goals? Did you exceed them or fall short? In what ways?*\n",
-    "*In what ways will you carry the experience of working on this project into your next courses, career stages, or personal life?*"
+    "Even without the complex problem at hand, working on a team has challenges. I learned the value of getting started early, checking in with group members on their progress, and not being afraid to take a leadership role. \n",
+    "\n",
+    "I will take the interpersonal learnings from this group project experience into my next semester and life beyond. I am much more confident now setting ambitious goals and accomplishing them. In a dream world, I hope my career will involve using Artificial Intelligence and Machine Learning to improve health outcomes. This project was a perfect opportunity for me to dip my toe into this area!"
    ]
   },
   {
