--- a/posts/CancerFinalProject/index.ipynb
+++ b/posts/CancerFinalProject/index.ipynb
@@ -9,7 +9,7 @@
     "author: Liz Rightmire\n",
     "date: '2024-05-16'\n",
     "image: \"image.jpg\"\n",
-    "description: \"My final project on skin cancer image classification\"\n",
+    "description: \"Skin Cancer Image Classification\"\n",
     "format: html\n",
     "publish: true\n",
     "---"
@@ -19,9 +19,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Blog Post\n",
-    "### On skin cancer identification using CNN and Logistic Regresison models\n",
-    "\n"
+    "# Final Project\n",
+    "### Skin Cancer Classification using CNN and Logistic Regresison Models"
    ]
   },
   {
@@ -88,7 +87,7 @@
     "#### Figure 1: Frequency of Skin Lesion Categories\n",
     "![](images/SkinCancer_TypeFrequency.png \"Skin Lesion Categories\")\n",
     "\n",
-    "This figure shows the frequency of diagnoses present in the data set. Clearly, the nv dx dominates, bringing up questions about how well a model trained on this data will classify any non-nv diagnoses. "
+    "This figure shows the frequency of diagnoses present in the data set. Clearly, the nv diagnosis dominates, bringing up questions about how well a model trained on this data will classify any non-nv diagnoses. "
    ]
   },
   {
@@ -101,14 +100,14 @@
     "Here is an example image, with the beginning of its numpy array representation:\n",
     "![image preprocessing](images/imagepreprocessing.png)\n",
     "\n",
-    "The goal was to predict the column of the metadata table labeled dx, the diagnosis corresponding to each lesion. We concatenated the dx column of the metadata onto the dataframe containing the image representations. We subset our data into two sets, 80% for the training set and 20% for the test set. "
+    "The goal was to predict the column of the metadata table labeled dx, the diagnosis corresponding to each lesion. We concatenated the dx column of the metadata onto the dataframe containing the numpy image representations. We subset our data into two sets: 80% for training and 20% for testing."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To artificially increase the size and diversity of our training dataset, we performed various transformations (such as flips, rotations, and image cropping) to the original images -- a technique known as Data Augmentation. We also eliminated half of the observations from the nv class to address the unbalanced class sizes. You may notice the example below is a bit blurry, that's because the images are now 32x32 pixel representations.\n",
+    "To artificially increase the size and diversity of our training dataset, we performed various transformations (such as flips, rotations, and image cropping) to the original images -- a technique known as Data Augmentation. You may notice the example below is a bit blurry, that's because the images are now 32x32 pixel representations.\n",
     "\n",
     "![Data Augmentation](images/DataAugmentation.png)"
    ]
@@ -164,20 +163,11 @@
     "### Concluding Discussion\n",
     "We were able to achieve a 75% accuracy rate, which is a huge improvement over the baseline accuracy of 58%. \n",
     "\n",
-    "While we most certainly did not cure cancer, we met many of our exploration and implementation goals. We gained experience with image processing, data augmentation, class weights, convolutional neural networks, and transfer learning. Our final model has some predictive power, and we were able to explore the HAM10000 dataset in depth.\n",
+    "While we most certainly did not cure cancer, we met many of our exploration and implementation goals. We gained experience with image processing, data augmentation, managing unbalanced classes, convolutional neural networks, and transfer learning. Our final model has some predictive power, and we were able to explore the HAM10000 dataset in depth.\n",
     "\n",
     "Our results were within the range of similarly experienced projects using the HAM10000 dataset. However, it is worth noting that one group of researchers was able to achieve an accuracy of 84.3% with an EfficientNet model, which is a more advanced model than the ones we used (Tajerian et al., 2023). Another group achieved an accuracy of 96.15 using Google's ViT patch-32 model (Himel et al., 2024). Seeing as these groups of researchers had PhDs and we have yet to obtain a Bachelor's degree, we are content with our results.\n",
     "\n",
     "If we'd had more time and resources to continue this project, we likely would have explored some of the more advanced models mentioned above, as well as attempted to replicate some of their results. We were also limited by the size of the dataset, which, is relatively small for a machine learning project but is quite large to be processed on a personal laptop. We had to reduce the sizes of the images to achieve a realistic runtime! We would have liked to further explore some of the ethical implications of our model, such as the potential for racial bias in the data and the potential for our model to be used as a diagnostic tool in underserved communities. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Group Contribution Statement\n",
-    "\n",
-    "Our group was formed because the topics proposed by Liz and Zoe had similarities regarding classification in the health space. We decided to split the workload so that Liz and Zoe work primarily on the building the convolutional neural network, while Julia and Breanna worked on improving the logistic regression models. For the final blog post, Breanna wrote the abstract, introduction and group contribution statement. Julia summarized the concluding thoughts, Liz wrote the values statement and worked on the results section jointly with Zoe, and Zoe championed the data/methods section."
    ]
   },
   {
